--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+header {
+    position: relative;
+}
+
 nav {
     height: 50.73px;
     background: #212121;
@@ -28,6 +32,8 @@ nav {
 }
 
 .subheader {
+    position: absolute;
+    width: 100%;
     height: 87px;
     background-color: rgba(0, 0, 0, .6);
 }
@@ -75,6 +81,54 @@ nav {
     border-radius: 4px;
     font-weight: 400;
     font-size: 14px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
+}
+
+.promo {
+    min-height: 800px;
+    background: url(../img/bg/uber_bg.jpg) center center/cover no-repeat;
+    padding: 152px 0 186px 0;
+}
+
+.promo .promo_header {
+    font-weight: 900;
+    font-size: 60px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.promo .promo_subheader {
+    font-weight: 700;
+    font-size: 36px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-top: 22px;
+    text-align: center;
+}
+
+.promo .promo_text {
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-top: 23px;
+}
+
+.promo .promo_btn {
+    display: block;
+    margin: 115px auto 0 auto;
+    width: 259px;
+    height: 63px;
+    background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
+    box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12);
+    border: none;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
