--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,11 +4,19 @@
 
 header {
     position: relative;
+    height: 50px;
+    /* * */
 }
 
 nav {
-    height: 50.73px;
-    background: #212121;
+    position: fixed;
+    /* * */
+    width: 100%;
+    /* * */
+    height: 50px;
+    background-color: #212121;
+    z-index: 2;
+    /* * */
 }
 
 .menu {
@@ -33,6 +41,8 @@ nav {
 
 .subheader {
     position: absolute;
+    top: 50px;
+    /* * */
     width: 100%;
     height: 87px;
     background-color: rgba(0, 0, 0, .6);
@@ -132,4 +142,52 @@ nav {
     text-transform: uppercase;
     color: #FFFFFF;
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
+}
+
+.reason {
+    min-height: 767px;
+    padding: 18px 0 64px 0;
+}
+
+.reason .reason_box {
+    margin: 0 auto;
+    width: 115px;
+    height: 27px;
+    background: #000000;
+    font-weight: 400;
+    font-size: 11px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.reason .reason_cause {
+    font-weight: 700;
+    font-size: 38px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #222222;
+    margin-top: 33px;
+}
+
+.reason .reason_icon {
+    border-radius: 100%;
+    width: 116px;
+    height: 116px;
+    background: #1EACC7;
+}
+
+.reason .reason_text {
+    font-weight: 300;
+    font-size: 15px;
+    align-items: center;
+    color: #202020;
+}
+
+.reason .reason_text span {
+    display: flex;
+    font-weight: 400;
+    font-size: 17px;
+    align-items: center;
+    color: #1EACC7;
 }
