2 step 1 lessons done

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,50 +144,64 @@ nav {
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
 }
 
-.reason {
-    min-height: 767px;
-    padding: 18px 0 64px 0;
+.reasons {
+    padding: 71px 0 65px 0;
 }
 
-.reason .reason_box {
+.label {
     margin: 0 auto;
-    width: 115px;
-    height: 27px;
-    background: #000000;
-    font-weight: 400;
+    height: 24px;
+    width: 112px;
+    padding: 5px 12px;
+    background-color: #000000;
+    color: #ffffff;
     font-size: 11px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFFFFF;
-}
-
-.reason .reason_cause {
-    font-weight: 700;
-    font-size: 38px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #222222;
-    margin-top: 33px;
-}
-
-.reason .reason_icon {
-    border-radius: 100%;
-    width: 116px;
-    height: 116px;
-    background: #1EACC7;
-}
-
-.reason .reason_text {
     font-weight: 300;
-    font-size: 15px;
-    align-items: center;
-    color: #202020;
+    text-transform: uppercase;
 }
 
-.reason .reason_text span {
+.title {
+    margin-bottom: 0;
+    margin-top: 38px;
+    color: #222222;
+    font-size: 38px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.reasons .reasons_block {
     display: flex;
-    font-weight: 400;
-    font-size: 17px;
+    justify-content: center;
     align-items: center;
-    color: #1EACC7;
+    margin-top: 35px;
+}
+
+.reasons .reasons_block .reasons_round {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 26px;
+    width: 113px;
+    height: 113px;
+    background-color: #1eacc7;
+    border-radius: 100%;
+}
+
+.reasons .reasons_block .reasons_descr {
+    width: 343px;
+}
+
+.reasons .reasons_block .reasons_descr .reasons_subtitle{
+    line-height: 21px;
+    color: #1eacc7;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.reasons .reasons_block .reasons_descr .reasons_text {
+    color: #202020;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
 }
