--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,153 +1,208 @@
-* 
-	font-family: 'Roboto', sans-serif 
-header 
-	position: relative 
-	height: 50px 
-nav 
-	position: fixed 
-	width: 100% 
-	height: 50px 
-	background-color: #212121 
-	z-index: 2 
-.menu 
-	display: flex 
-	justify-content: space-between 
-	padding: 13px 70px 
-	margin: 0 
-	list-style-type: none 
-	.menu_link 
-		font-weight: 300 
-		font-size: 15px 
-		color: #FFFFFF 
-		text-decoration: none 
-	.menu_item 
-		border-right: 2px dotted #000 
-		padding-right: 57px 
-.subheader 
-	position: absolute 
-	top: 50px 
-	width: 100% 
-	height: 87px 
-	background-color: rgba(0, 0, 0, .6) 
-	.subheader_logo 
-		display: block 
-		max-width: 100% 
-		margin-top: 19px 
-	.subheader_text 
-		font-weight: 100 
-		font-size: 13px 
-		color: #FFFFFF 
-		margin-top: 1px 
-	.subheader_call 
-		font-weight: 300 
-		font-size: 12px 
-		color: #FFFFFF 
-		margin-top: 19px 
-		text-align: right 
-	.subheader_tel 
-		display: block 
-		font-weight: 400 
-		font-size: 22px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		margin-top: 9px 
-		text-decoration: none 
-		line-height: 12px 
-		text-align: right 
-	.subheader_btn 
-		margin-top: 19px 
-		width: 172px 
-		height: 46px 
-		background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%) 
-		box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12) 
-		border: none 
-		border-radius: 4px 
-		font-weight: 400 
-		font-size: 14px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21) 
-.promo 
-	min-height: 800px 
-	background: url(../img/bg/uber_bg.jpg) center center/cover no-repeat 
-	padding: 152px 0 186px 0 
-	.promo_header 
-		font-weight: 900 
-		font-size: 60px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		text-align: center 
-	.promo_subheader 
-		font-weight: 700 
-		font-size: 36px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		margin-top: 22px 
-		text-align: center 
-	.promo_text 
-		font-weight: 400 
-		font-size: 18px 
-		text-align: center 
-		color: #FFFFFF 
-		margin-top: 23px 
-	.promo_btn 
-		display: block 
-		margin: 115px auto 0 auto 
-		width: 259px 
-		height: 63px 
-		background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%) 
-		box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12) 
-		border: none 
-		border-radius: 4px 
-		font-weight: 400 
-		font-size: 18px 
-		text-align: center 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21) 
-.reasons 
-	padding: 71px 0 65px 0 
-	.reasons_block 
-		display: flex 
-		justify-content: center 
-		align-items: center 
-		margin-top: 35px 
-		.reasons_round 
-			display: flex 
-			justify-content: center 
-			align-items: center 
-			margin-right: 26px 
-			width: 113px 
-			height: 113px 
-			background-color: #1eacc7 
-			border-radius: 100% 
-		.reasons_descr 
-			width: 343px 
-			.reasons_subtitle 
-				line-height: 21px 
-				color: #1eacc7 
-				font-size: 17px 
-				font-weight: 400 
-			.reasons_text 
-				color: #202020 
-				font-size: 15px 
-				font-weight: 300 
-				line-height: 21px 
-.label 
-	margin: 0 auto 
-	height: 24px 
-	width: 112px 
-	padding: 5px 12px 
-	background-color: #000000 
-	color: #ffffff 
-	font-size: 11px 
-	font-weight: 300 
-	text-transform: uppercase 
-.title 
-	margin-bottom: 0 
-	margin-top: 38px 
-	color: #222222 
-	font-size: 38px 
-	font-weight: 700 
-	text-transform: uppercase 
-	text-align: center 
+*
+	font-family: 'Roboto', sans-serif
+header
+	position: relative
+	height: 50px
+nav
+	position: fixed
+	width: 100%
+	height: 50px
+	background-color: #212121
+	z-index: 2
+.menu
+	display: flex
+	justify-content: space-between
+	padding: 13px 70px
+	margin: 0
+	list-style-type: none
+	.menu_link
+		font-weight: 300
+		font-size: 15px
+		color: #FFFFFF
+		text-decoration: none
+	.menu_item
+		border-right: 2px dotted #000
+		padding-right: 57px
+.subheader
+	position: absolute
+	top: 50px
+	width: 100%
+	height: 87px
+	background-color: rgba(0, 0, 0, .6)
+	.subheader_logo
+		display: block
+		max-width: 100%
+		margin-top: 19px
+	.subheader_text
+		font-weight: 100
+		font-size: 13px
+		color: #FFFFFF
+		margin-top: 1px
+	.subheader_call
+		font-weight: 300
+		font-size: 12px
+		color: #FFFFFF
+		margin-top: 19px
+		text-align: right
+	.subheader_tel
+		display: block
+		font-weight: 400
+		font-size: 22px
+		text-transform: uppercase
+		color: #FFFFFF
+		margin-top: 9px
+		text-decoration: none
+		line-height: 12px
+		text-align: right
+	.subheader_btn
+		margin-top: 19px
+		width: 172px
+		height: 46px
+		background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
+		box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12)
+		border: none
+		border-radius: 4px
+		font-weight: 400
+		font-size: 14px
+		text-transform: uppercase
+		color: #FFFFFF
+		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+.promo
+	min-height: 800px
+	background: url(../img/bg/uber_bg.jpg) center center/cover no-repeat
+	padding: 152px 0 186px 0
+	.promo_header
+		font-weight: 900
+		font-size: 60px
+		text-transform: uppercase
+		color: #FFFFFF
+		text-align: center
+	.promo_subheader
+		font-weight: 700
+		font-size: 36px
+		text-transform: uppercase
+		color: #FFFFFF
+		margin-top: 22px
+		text-align: center
+	.promo_text
+		font-weight: 400
+		font-size: 18px
+		text-align: center
+		color: #FFFFFF
+		margin-top: 23px
+	.promo_btn
+		display: block
+		margin: 115px auto 0 auto
+		width: 259px
+		height: 63px
+		background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
+		box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12)
+		border: none
+		border-radius: 4px
+		font-weight: 400
+		font-size: 18px
+		text-align: center
+		text-transform: uppercase
+		color: #FFFFFF
+		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+.reasons
+	padding: 71px 0 65px 0
+	.reasons_block
+		display: flex
+		justify-content: center
+		align-items: center
+		margin-top: 35px
+		.reasons_round
+			display: flex
+			justify-content: center
+			align-items: center
+			margin-right: 26px
+			width: 113px
+			height: 113px
+			background-color: #1eacc7
+			border-radius: 100%
+		.reasons_descr
+			width: 343px
+			.reasons_subtitle
+				line-height: 21px
+				color: #1eacc7
+				font-size: 17px
+				font-weight: 400
+			.reasons_text
+				color: #202020
+				font-size: 15px
+				font-weight: 300
+				line-height: 21px
+.label
+	margin: 0 auto
+	height: 24px
+	width: 112px
+	padding: 5px 12px
+	background-color: #000000
+	color: #ffffff
+	font-size: 11px
+	font-weight: 300
+	text-transform: uppercase
+	text-align: center
+.title
+	margin-bottom: 0
+	margin-top: 38px
+	color: #222222
+	font-size: 38px
+	font-weight: 700
+	text-transform: uppercase
+	text-align: center
+.subtitle
+	margin-top: 19px
+	font-weight: 400
+	font-size: 17px
+	text-align: center
+	color: #222222
+
+.mobile
+	min-height: 864px
+	padding: 48px 0 80px 0
+	background: white
+	.row
+		margin-top: 30px
+	&_item
+		position: relative
+		width: 320px
+		height: 280px
+		margin: 0 auto
+		margin-bottom: 19px
+		padding-top: 92px
+		&_1
+			background: url('../img/card_1.png') center (center/cover) no-repeat
+		&_2
+			background: url('../img/card_2.png') center (center/cover) no-repeat
+		&_3
+			background: url('../img/card_3.png') center (center/cover) no-repeat
+		&_4
+			background: url('../img/card_4.png') center (center/cover) no-repeat
+		&_5
+			background: url('../img/card_5.png') center (center/cover) no-repeat
+		&_6
+			background: url('../img/card_6.png') center (center/cover) no-repeat
+		&_subtitle
+			color: #FFFFFF
+			font-weight: 400
+			font-size: 24px
+			text-align: center
+			text-transform: uppercase
+		&_plus
+			display: flex
+			justify-content: center
+			align-items: center
+			position: absolute
+			bottom: 35px
+			left: 50%
+			transform: translateX(-50%)
+			width: 29px
+			height: 29px
+			background: #000000
+			margin: 0 auto
+			border-radius: 100%
+			cursor: pointer
+			
+				
