car container done

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -162,7 +162,7 @@ nav
 .mobile
 	min-height: 864px
 	padding: 48px 0 80px 0
-	background: white
+	background: url('../img/bg/mobile_bg.jpg') center center/cover no-repeat
 	.row
 		margin-top: 30px
 	&_item
@@ -204,5 +204,43 @@ nav
 			margin: 0 auto
 			border-radius: 100%
 			cursor: pointer
-			
-				
+
+.car
+	min-height: 896px
+	padding: 54px 0 137px 0
+	background: url('../img/bg/car_bg.jpg') center center/cover no-repeat
+	&_label_white
+		margin: 0 auto
+		height: 24px
+		width: 112px
+		padding: 5px 12px
+		background-color: #ffffff
+		color: #000000
+		font-size: 11px
+		font-weight: 300
+		text-transform: uppercase
+		text-align: center
+	&_title
+		margin: 0 auto
+		margin-top: 26px
+		font-weight: 700
+		font-size: 38px
+		text-align: center
+		text-transform: uppercase
+		color: #FFFFFF
+	&_subtitle
+		font-weight: 400
+		font-size: 17px
+		text-align: center
+		color: #FFFFFF
+		margin-top: 2px
+	&_icon
+		display: block
+		margin: 0 auto
+		margin-top: 54px
+		text-align: center
+		.car_descr
+			font-weight: 300
+			font-size: 17px
+			text-align: center
+			color: #222222
