--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,10 @@
+@mixin btn_hover
+	&:hover
+		background-image: none
+		background-color: $main-color
+$main-color: #1eacc7
+$second-color: #ff5656
+
 *
 	font-family: 'Roboto', sans-serif
 header
@@ -29,32 +36,32 @@ nav
 	width: 100%
 	height: 87px
 	background-color: rgba(0, 0, 0, .6)
-	.subheader_logo
+	&_logo
 		display: block
 		max-width: 100%
 		margin-top: 19px
-	.subheader_text
+	&_text
 		font-weight: 100
 		font-size: 13px
 		color: #FFFFFF
 		margin-top: 1px
-	.subheader_call
+	&_call
 		font-weight: 300
 		font-size: 12px
 		color: #FFFFFF
 		margin-top: 19px
 		text-align: right
-	.subheader_tel
+	&_tel
 		display: block
 		font-weight: 400
 		font-size: 22px
 		text-transform: uppercase
-		color: #FFFFFF
+		color: white
 		margin-top: 9px
 		text-decoration: none
 		line-height: 12px
 		text-align: right
-	.subheader_btn
+	&_btn
 		margin-top: 19px
 		width: 172px
 		height: 46px
@@ -67,30 +74,31 @@ nav
 		text-transform: uppercase
 		color: #FFFFFF
 		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+		@include btn_hover
 .promo
 	min-height: 800px
 	background: url(../img/bg/uber_bg.jpg) center center/cover no-repeat
 	padding: 152px 0 186px 0
-	.promo_header
+	&_header
 		font-weight: 900
 		font-size: 60px
 		text-transform: uppercase
 		color: #FFFFFF
 		text-align: center
-	.promo_subheader
+	&_subheader
 		font-weight: 700
 		font-size: 36px
 		text-transform: uppercase
 		color: #FFFFFF
 		margin-top: 22px
 		text-align: center
-	.promo_text
+	&_text
 		font-weight: 400
 		font-size: 18px
 		text-align: center
 		color: #FFFFFF
 		margin-top: 23px
-	.promo_btn
+	&_btn
 		display: block
 		margin: 115px auto 0 auto
 		width: 259px
@@ -105,6 +113,7 @@ nav
 		text-transform: uppercase
 		color: #FFFFFF
 		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+		@include btn_hover
 .reasons
 	padding: 71px 0 65px 0
 	.reasons_block
@@ -204,6 +213,27 @@ nav
 			margin: 0 auto
 			border-radius: 100%
 			cursor: pointer
+			&:before
+				content: ''
+				display: block
+				width: 14px
+				height: 2px
+				background-color: $main-color
+				transition: 0.3s all
+			&:after
+				content: ''
+				position: absolute
+				left: 50%
+				display: block
+				transform: translateX(-50%)
+				height: 14px
+				width: 2px
+				background-color: $main-color
+				transition: 0.3s all
+			&:hover
+				&:before, &:after
+					background-color: $second-color
+					
 
 .car
 	min-height: 896px
@@ -244,3 +274,12 @@ nav
 			font-size: 17px
 			text-align: center
 			color: #222222
+
+.require
+	padding: 66px 0 87px 0
+	&_block
+		margin: 33px 0
+		&_nbm
+			margin-bottom: 0px
+			&_title
+				
