--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -354,3 +354,15 @@ nav
 		text-decoration: none
 		margin-top: 486px
 		color: #1FBAD6
+footer 
+	padding: 14px 23px 39px 23px
+	a
+		&:hover
+			text-decoration: none
+.footer
+	&_divider
+		width: 301px
+		height: 7px
+		background: #1FBAD6
+		margin: 0 auto
+	&_wrapper
