--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -12,6 +12,9 @@
 			align-items: flex-start
 		&_descr
 			width: 296px
+	.mobile
+		&_item
+			width: 300px
 
 @media screen and ( max-width: 991px )
 	.menu
@@ -28,7 +31,7 @@
 		&_tel
 			font-size: 20px
 		&_btn
-			margin-top: 22	px
+			margin-top: 22px
 			width: 100%
 			height: 40px
 	.promo
@@ -43,6 +46,9 @@
 		&_descr
 			width: 296px
 			margin-top: 15px
+	.mobile
+		&_item
+				
 
 @media screen and ( max-width: 767px )
 	.menu
@@ -65,3 +71,6 @@
 			margin: 10px
 		&_link
 			font-size: 20px
+	.world
+		&_city
+			width: 200px
