--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -57,6 +57,7 @@
 		flex-direction: column
 		justify-content: center
 		align-items: center
+		text-align: center
 		top: 0
 		left: -100%
 		width: 50%
@@ -132,7 +133,12 @@
 		&_title
 			text-align: center
 @media screen and ( max-width: 575px )
+	nav
+		height: 30px
+	header
+		height: 30px
 	.subheader
+		top: 30px
 		height: 60px
 		&_text
 			display: none
@@ -148,3 +154,73 @@
 			height: 20px
 			font-size: 10px
 			margin-top: 7px
+	.promo
+		min-height: 400px
+		padding: 93px 0 35px 0
+		&_text
+			display: none
+		&_header
+			font-size: 30px
+			padding: 0 24px
+			line-height: 35px
+		&_subheader
+			font-size: 20px
+			margin-top: 33px
+			padding: 0 13px
+			line-height: 30px
+		&_btn
+			width: 210px
+			height: 50px
+			margin-top: 72px
+			font-size: 16px
+	.menu
+		width: 85%
+		text-align: center
+		&_item
+			width: 100%
+			padding: 5px 0
+		&_link
+			display: block
+	.reasons
+		padding: 35px 0 30px 0
+		h2
+			font-size: 16px
+		&_round
+			width: 100px
+			height: 100px
+			margin: 0 auto
+	.mobile
+		padding: 25px 0 20px 0
+		.title
+			font-size: 20px
+		.subtitle
+			font-size: 15px
+	.car
+		min-height: 350px
+		padding: 50px 0 50px 0
+		&_title
+			font-size: 20px
+		&_subtitle
+			font-size: 14px
+			margin-top: 15px
+		&_descr
+			font-size: 14px
+	.require
+		padding: 30px 0 30px 0
+		h2
+			font-size: 22px
+		&_title
+			font-size: 18px
+		&_list li
+			font-size: 15px
+		&_descr
+			font-size: 15px
+	.world
+		min-height: 400px
+		&_all
+			font-size: 30px
+		&_descr
+			font-size: 15px
+			margin-top: 10px
+		&_city
+			margin-top: 200px
